--- a/Client/ClientCryptoModule/ClientCryptoModule.vcxproj
+++ b/Client/ClientCryptoModule/ClientCryptoModule.vcxproj
@@ -70,6 +70,9 @@
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
+    <IncludePath>$(ProjectDir)..\..\share\;$(IncludePath)</IncludePath>
+  </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
@@ -127,13 +130,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\..\share\SimpleLogger.cpp" />
     <ClCompile Include="main.cpp" />
-    <ClCompile Include="SimpleLogger.cpp" />
     <ClCompile Include="TcpClient.cpp" />
     <ClCompile Include="TcpComm.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="SimpleLogger.h" />
+    <ClInclude Include="..\..\share\SimpleLogger.h" />
     <ClInclude Include="TcpClient.h" />
     <ClInclude Include="TcpComm.h" />
   </ItemGroup>
