修改Client的命名规范，改成全拼，不用缩写

--- a/Client/ClientCryptoModule/ClientCryptoModule.vcxproj
+++ b/Client/ClientCryptoModule/ClientCryptoModule.vcxproj
@@ -133,12 +133,12 @@
     <ClCompile Include="..\..\share\SimpleLogger.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="TcpClient.cpp" />
-    <ClCompile Include="TcpComm.cpp" />
+    <ClCompile Include="TcpCommunication.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\share\SimpleLogger.h" />
     <ClInclude Include="TcpClient.h" />
-    <ClInclude Include="TcpComm.h" />
+    <ClInclude Include="TcpCommunication.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
