--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@
 /Client/ClientCryptoModule/x64/Debug/ClientCryptoModule.pdb
 /Client/ClientCryptoModule/x64/Debug/ClientCryptoModule.vcxproj.FileListAbsolute.txt
 /Client/ClientCryptoModule/x64/Debug/main.obj
+/Client/ClientCryptoModule/x64/Debug/TcpCommunication.obj
