add cmake file for Server

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,6 @@
 /Client/ClientCryptoModule/x64/Debug/ClientCryptoModule.vcxproj.FileListAbsolute.txt
 /Client/ClientCryptoModule/x64/Debug/main.obj
 /Client/ClientCryptoModule/x64/Debug/TcpCommunication.obj
+/Server/build/
+.vscode/
+
